--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,5 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus
-  endpoint:
-    prometheus:
-      enabled: true
+        include: health,info
 
